Bug 139616 - Division names in 'Division by flag' result view not translated
Summary: Division names in 'Division by flag' result view not translated
Status: RESOLVED FIXED
Alias: None
Product: kgeography
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Albert Astals Cid
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-01-05 00:48 UTC by Marius
Modified: 2007-01-05 01:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marius 2007-01-05 00:48:42 UTC
Version:            (using KDE )

The Division names in the 'Division by flag' result view are not translated. This is certainly an error in kgeography and not an error in the translation as i have personally done the translation.

Here is a screenshot:
http://img211.imageshack.us/img211/5282/skjermbilde1by2.png

Notice how it says "Western Sahara" instead of the translated "Vestsahara".
Comment 1 Pino Toscano 2007-01-05 01:33:18 UTC
SVN commit 620012 by pino:

Use the right translated form.

BUG: 139616


 M  +1 -1      divisionflagasker.cpp  


--- branches/KDE/3.5/kdeedu/kgeography/src/divisionflagasker.cpp #620011:620012
@@ -41,7 +41,7 @@
 			setQuestion(i18n(p_map -> getFileName().utf8(), s.utf8()));
 		}
 		p_currentAnswer.setCorrectAnswer(im);
-		p_currentAnswer.setQuestion(division);
+		p_currentAnswer.setQuestion(i18n(p_map -> getFileName().utf8(), division.utf8()));
 	}
 	return true;
 }