Use the right translated form.

BUG: 139616

svn path=/branches/KDE/3.5/kdeedu/kgeography/; revision=620012